@@ -9,6 +9,7 @@ version <next>:
 - stereowiden filter
 - stereotools filter
 - rubberband filter
+- tremolo filter
 
 
 version 2.8:
